--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.group.project.field_audience
     - field.field.group.project.field_date_time_range
+    - field.field.group.project.field_legacy_path
     - field.field.group.project.field_shortname_or_acronym
     - field.field.group.project.field_summary
     - field.field.group.project.field_topics
@@ -61,5 +62,6 @@ content:
 hidden:
   changed: true
   created: true
+  field_legacy_path: true
   field_shortname_or_acronym: true
   uid: true
