--- a/web/sites/default/config/field.field.group.bureau_office.field_legacy_path.yml
+++ b/web/sites/default/config/field.field.group.bureau_office.field_legacy_path.yml
@@ -1,24 +1,24 @@
-uuid: b267b013-b8f0-483e-8a46-8af7ae22e4f1
+uuid: 92c509f0-b75b-4cd3-a6c0-975f7e8048e5
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_legacy_path
-    - node.type.building
+    - field.storage.group.field_legacy_path
+    - group.type.bureau_office
   module:
     - custom_add_another
 third_party_settings:
   custom_add_another:
     custom_add_another: 'Add another path'
     custom_remove: 'Remove this path'
-id: node.building.field_legacy_path
+id: group.bureau_office.field_legacy_path
 field_name: field_legacy_path
-entity_type: node
-bundle: building
+entity_type: group
+bundle: bureau_office
 label: 'Legacy path'
 description: 'This field is used to create redirects to this page from legacy pages in the old site. Multiple paths may be entered in case several pages have been combined during migration. Once these paths are created, they may only be modified or removed by an administrator. Paths must be relative and start with a slash. For example, the page "https://www.portlandoregon.gov/bts/39479" should be entered as "/bts/39479."'
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
