--- a/web/sites/default/config/field.field.group.elected_official.field_legacy_path.yml
+++ b/web/sites/default/config/field.field.group.elected_official.field_legacy_path.yml
@@ -1,20 +1,20 @@
-uuid: b267b013-b8f0-483e-8a46-8af7ae22e4f1
+uuid: f39707fb-7773-453a-ae7c-c493e372f081
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_legacy_path
-    - node.type.building
+    - field.storage.group.field_legacy_path
+    - group.type.elected_official
   module:
     - custom_add_another
 third_party_settings:
   custom_add_another:
     custom_add_another: 'Add another path'
     custom_remove: 'Remove this path'
-id: node.building.field_legacy_path
+id: group.elected_official.field_legacy_path
 field_name: field_legacy_path
-entity_type: node
-bundle: building
+entity_type: group
+bundle: elected_official
 label: 'Legacy path'
 description: 'This field is used to create redirects to this page from legacy pages in the old site. Multiple paths may be entered in case several pages have been combined during migration. Once these paths are created, they may only be modified or removed by an administrator. Paths must be relative and start with a slash. For example, the page "https://www.portlandoregon.gov/bts/39479" should be entered as "/bts/39479."'
 required: false
