--- a/web/sites/default/config/field.field.node.service_location.field_legacy_path.yml
+++ b/web/sites/default/config/field.field.node.service_location.field_legacy_path.yml
@@ -9,8 +9,8 @@ dependencies:
     - custom_add_another
 third_party_settings:
   custom_add_another:
-    custom_add_another: ''
-    custom_remove: ''
+    custom_add_another: 'Add another path'
+    custom_remove: 'Remove this path'
 id: node.service_location.field_legacy_path
 field_name: field_legacy_path
 entity_type: node
