POWR-342 initial refactor of facets and views for services and bureau listings

--- a/web/sites/default/config/facets.facet.bureaus_by_audience.yml
+++ b/web/sites/default/config/facets.facet.bureaus_by_audience.yml
@@ -36,17 +36,17 @@ processor_configs:
     weights:
       sort: -10
     settings:
-      sort: DESC
+      sort: ASC
   count_widget_order:
     processor_id: count_widget_order
     weights:
-      sort: -10
+      sort: -9
     settings:
       sort: DESC
   display_value_widget_order:
     processor_id: display_value_widget_order
     weights:
-      sort: -10
+      sort: -8
     settings:
       sort: ASC
   url_processor_handler:
@@ -57,3 +57,4 @@ processor_configs:
     settings: {  }
 empty_behavior:
   behavior: none
+show_title: false
