--- a/web/sites/default/config/facets.facet.services_by_action.yml
+++ b/web/sites/default/config/facets.facet.services_by_action.yml
@@ -36,7 +36,7 @@ processor_configs:
     weights:
       sort: -10
     settings:
-      sort: DESC
+      sort: ASC
   count_limit:
     processor_id: count_limit
     weights:
@@ -47,13 +47,13 @@ processor_configs:
   count_widget_order:
     processor_id: count_widget_order
     weights:
-      sort: -10
+      sort: -9
     settings:
       sort: DESC
   display_value_widget_order:
     processor_id: display_value_widget_order
     weights:
-      sort: -10
+      sort: -8
     settings:
       sort: ASC
   url_processor_handler:
