--- a/web/sites/default/config/facets.facet.services_by_topic.yml
+++ b/web/sites/default/config/facets.facet.services_by_topic.yml
@@ -34,9 +34,9 @@ processor_configs:
   active_widget_order:
     processor_id: active_widget_order
     weights:
-      sort: -10
+      sort: -9
     settings:
-      sort: DESC
+      sort: ASC
   count_limit:
     processor_id: count_limit
     weights:
@@ -53,7 +53,7 @@ processor_configs:
   display_value_widget_order:
     processor_id: display_value_widget_order
     weights:
-      sort: -10
+      sort: -8
     settings:
       sort: ASC
   url_processor_handler:
