--- a/web/sites/default/config/views.view.bureaus_and_offices.yml
+++ b/web/sites/default/config/views.view.bureaus_and_offices.yml
@@ -40,7 +40,7 @@ display:
       exposed_form:
         type: basic
         options:
-          submit_button: Search
+          submit_button: 'Search bureaus and offices'
           reset_button: true
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
@@ -71,14 +71,18 @@ display:
       style:
         type: html_list
         options:
-          grouping: {  }
-          row_class: list-group-item
-          default_row_class: true
+          row_class: 'list-group-item list-group-item-action'
+          default_row_class: false
+          uses_fields: false
           type: ul
           wrapper_class: container
           class: 'list-group col-12'
       row:
-        type: fields
+        type: search_api
+        options:
+          view_modes:
+            'entity:group':
+              bureau_office: teaser
       fields:
         label:
           id: label
