--- a/web/sites/default/config/views.view.services_index.yml
+++ b/web/sites/default/config/views.view.services_index.yml
@@ -36,7 +36,7 @@ display:
       exposed_form:
         type: basic
         options:
-          submit_button: Search
+          submit_button: 'Search services'
           reset_button: true
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
@@ -67,14 +67,18 @@ display:
       style:
         type: html_list
         options:
-          grouping: {  }
-          row_class: list-group-item
+          row_class: 'list-group-item list-group-item-action'
           default_row_class: true
+          uses_fields: false
           type: ul
           wrapper_class: container
           class: 'list-group col-12'
       row:
-        type: fields
+        type: search_api
+        options:
+          view_modes:
+            'entity:node':
+              city_service: teaser
       fields:
         title:
           id: title
@@ -192,7 +196,7 @@ display:
           parse_mode: terms
           min_length: null
           fields:
-            rendered_item: rendered_item
+            - rendered_item
           plugin_id: search_api_fulltext
       sorts:
         title:
