--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,7 +104,7 @@ behat_tests: &behat_tests
             # terminus env:clone-content portlandor.test dev
             # Don't need to wait for DEV because it's always up?
             # Wake up the DEV site and must wait for 30s
-            terminus env:wake portlandor.dev
+            terminus env:wake portlandor.dev && sleep 30s
             # terminus remote:drush portlandor.dev -- cr
             # terminus remote:drush portlandor.dev -- cim -y
             for i in {1..12}; do terminus remote:drush portlandor.dev -- cim -y && break || sleep 10; done
@@ -150,13 +150,13 @@ behat_tests: &behat_tests
               # sleep 20s
               # This version wipes out the Pantheon tree.
               git push -f pantheon $CIRCLE_BRANCH
-              terminus env:wake portlandor.$CIRCLE_BRANCH
+              terminus env:wake portlandor.$CIRCLE_BRANCH && sleep 60s
             else
               rm -rf ./env_list.txt
               git push -f pantheon $CIRCLE_BRANCH
               # Wake up the multidev site and wait 30s.
               # The following two drush commands will fail without wait for a few seconds
-              terminus env:wake portlandor.$CIRCLE_BRANCH
+              terminus env:wake portlandor.$CIRCLE_BRANCH && sleep 60s
             fi
             # Clear cache. Import config files
             for i in {1..6}; do terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y && break || sleep 10; done
