--- a/web/sites/default/config/core.entity_form_display.paragraph.form_app_button.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.form_app_button.default.yml
@@ -18,7 +18,7 @@ content:
       placeholder_url: ''
       placeholder_title: ''
       link_class_mode: force_class
-      link_class_force: 'btn btn-primary ext'
+      link_class_force: 'btn btn-primary'
       link_class_select: ''
     third_party_settings: {  }
     type: link_class_field_widget
