--- a/web/sites/default/config/core.entity_form_display.paragraph.form_app_button.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.form_app_button.default.yml
@@ -17,9 +17,9 @@ content:
     settings:
       placeholder_url: ''
       placeholder_title: ''
-      link_class_mode: force_class
+      link_class_mode: select_class
       link_class_force: 'btn btn-primary'
-      link_class_select: ''
+      link_class_select: "btn-cta|Call to Action Dark\nbtn-cta-outline|Call to Action Light"
     third_party_settings: {  }
     type: link_class_field_widget
     region: content
