--- a/web/sites/default/config/core.entity_view_display.group.project.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.teaser.yml
@@ -7,10 +7,13 @@ dependencies:
     - field.field.group.project.field_audience
     - field.field.group.project.field_date_time_range
     - field.field.group.project.field_legacy_path
+    - field.field.group.project.field_parent_group
     - field.field.group.project.field_shortname_or_acronym
     - field.field.group.project.field_summary
     - field.field.group.project.field_topics
     - group.type.project
+  module:
+    - ds
 id: group.project.teaser
 targetEntityType: group
 bundle: project
@@ -58,14 +61,22 @@ content:
     weight: 0
     region: content
     settings:
-      link_to_entity: false
-    third_party_settings: {  }
+      link_to_entity: true
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 hidden:
   changed: true
   created: true
   field_audience: true
   field_date_time_range: true
   field_legacy_path: true
+  field_parent_group: true
   field_shortname_or_acronym: true
   field_topics: true
   uid: true
