--- a/web/sites/default/config/search_api.index.full_index.yml
+++ b/web/sites/default/config/search_api.index.full_index.yml
@@ -3,18 +3,17 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.storage.node.field_body
     - field.storage.group.field_official_organization_name
     - field.storage.group.field_official_title
     - field.storage.group.field_shortname_or_acronym
     - field.storage.group.field_summary
-    - field.storage.node.field_body
     - field.storage.node.field_summary
     - search_api.server.pantheon
   module:
     - search_api_solr
     - search_api
     - portland
-    - group
     - node
     - group
     - taxonomy
@@ -193,7 +192,12 @@ datasource_settings:
   'entity:node':
     bundles:
       default: true
-      selected: {  }
+      selected:
+        - alert
+        - building
+        - notification
+        - service_location
+        - top_search
     languages:
       default: true
       selected: {  }
