POWR-379 - initial metatag configuration

--- a/web/sites/default/config/metatag.metatag_defaults.403.yml
+++ b/web/sites/default/config/metatag.metatag_defaults.403.yml
@@ -7,5 +7,4 @@ _core:
 id: '403'
 label: '403 access denied'
 tags:
-  canonical_url: '[site:url]'
-  shortlink: '[site:url]'
+  robots: 'noindex, nofollow'
