--- a/web/sites/default/config/metatag.metatag_defaults.404.yml
+++ b/web/sites/default/config/metatag.metatag_defaults.404.yml
@@ -7,5 +7,4 @@ _core:
 id: '404'
 label: '404 page not found'
 tags:
-  canonical_url: '[site:url]'
-  shortlink: '[site:url]'
+  robots: 'noindex, nofollow'
