--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -93,6 +93,8 @@ module:
   menu_ui: 0
   metatag: 0
   moderation_dashboard: 0
+  metatag_open_graph: 0
+  metatag_twitter_cards: 0
   node: 0
   openapi: 0
   openapi_ui: 0
