--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -159,3 +159,5 @@ config_filter: 1.3.0
 config_split: 1.4.0
 easy_breadcrumb: 1.8.0
 media_library: 8.6.1
+metatag_open_graph: 0.0.0
+metatag_twitter_cards: 0.0.0
