--- a/web/sites/default/config/metatag.metatag_defaults.global.yml
+++ b/web/sites/default/config/metatag.metatag_defaults.global.yml
@@ -8,4 +8,12 @@ id: global
 label: Global
 tags:
   canonical_url: '[current-page:url]'
+  description: '[node:field_summary]'
   title: '[current-page:title] | [site:name]'
+  og_description: '[node:field_summary]'
+  og_site_name: '[site:name]'
+  og_title: '[current-page:title] | [site:name]'
+  twitter_cards_description: '[node:field_summary]'
+  twitter_cards_page_url: '[current-page:url]'
+  twitter_cards_title: '[current-page:title] | [site:name]'
+  twitter_cards_type: summary
