--- a/web/sites/default/config/metatag.metatag_defaults.node.yml
+++ b/web/sites/default/config/metatag.metatag_defaults.node.yml
@@ -7,6 +7,12 @@ _core:
 id: node
 label: Content
 tags:
-  title: '[node:title] | [site:name]'
-  description: '[node:summary]'
   canonical_url: '[node:url]'
+  description: '[node:field_summary]'
+  title: '[node:title] | [site:name]'
+  og_description: '[node:field_summary]'
+  og_site_name: '[site:name]'
+  og_title: '[current-page:title] | [site:name]'
+  twitter_cards_description: '[node:field_summary]'
+  twitter_cards_title: '[current-page:title] | [site:name]'
+  twitter_cards_type: summary
