--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -7,6 +7,7 @@ module:
   allowed_formats: 0
   anonymous_login: 0
   automated_cron: 0
+  blazy: 0
   block: 0
   block_content: 0
   bootstrap_library: 0
@@ -65,6 +66,7 @@ module:
   inline_form_errors: 0
   jsonapi: 0
   layout_discovery: 0
+  libraries: 0
   lightning_api: 0
   lightning_contact_form: 0
   lightning_core: 0
@@ -89,6 +91,7 @@ module:
   media: 0
   media_entity_instagram: 0
   media_entity_twitter: 0
+  media_library: 0
   menu_ui: 0
   metatag: 0
   node: 0
@@ -126,6 +129,8 @@ module:
   shortcut: 0
   simple_oauth: 0
   simple_oauth_extras: 0
+  slick: 0
+  slick_entityreference: 0
   system: 0
   taxonomy: 0
   telephone: 0
