--- a/web/sites/default/config/core.entity_view_display.media.image.media_library.yml
+++ b/web/sites/default/config/core.entity_view_display.media.image.media_library.yml
@@ -15,6 +15,21 @@ targetEntityType: media
 bundle: image
 mode: media_library
 content:
+  content_moderation_control:
+    weight: -20
+    settings: {  }
+    third_party_settings: {  }
+    region: content
+  created:
+    label: hidden
+    type: timestamp
+    weight: 0
+    region: content
+    settings:
+      date_format: medium
+      custom_date_format: ''
+      timezone: ''
+    third_party_settings: {  }
   thumbnail:
     type: image
     region: content
@@ -23,6 +38,13 @@ content:
       image_style: thumbnail
       image_link: ''
     weight: 0
+    third_party_settings: {  }
+  uid:
+    label: hidden
+    type: author
+    weight: 0
+    region: content
+    settings: {  }
     third_party_settings: {  }
 hidden:
   field_media_in_library: true
