--- a/composer.json
+++ b/composer.json
@@ -134,7 +134,9 @@
                 "Database::startLog() cause a notice in Shortcut::sort()": "https://www.drupal.org/files/issues/2567035-surpress-uasort-contents-modified-errors-20.patch",
                 "1349080 - node_access filters out accessible nodes when node is left joined.": "https://www.drupal.org/files/issues/1349080-397-D8.patch",
                 "2786577 - Extend datetime range field support for views": "https://www.drupal.org/files/issues/2786577-270_0.patch",
-                "2797583 - Dynamically provide action plugins for every moderation state change": "https://www.drupal.org/files/issues/publish_unpublish-2797583-62.patch"
+                "2797583 - Dynamically provide action plugins for every moderation state change": "https://www.drupal.org/files/issues/publish_unpublish-2797583-62.patch",
+                "2730631-41 - Node revision routes don't convert {node} param": "https://www.drupal.org/files/issues/2730631-41.patch",
+                "2885278 - Node local tasks tabs do not appear on node revisions": "https://www.drupal.org/files/issues/2018-04-19/node-revisions-missing-local-tasks-2885278-11.patch"
             },
             "drupal/ctools": {
                 "Views exposed filters missing autosubmit option https://www.drupal.org/node/2475595": "https://www.drupal.org/files/issues/2475595-ctools-autocomplete-fix-24.patch"
