--- a/web/sites/default/config/core.entity_form_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.information.default.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - field.field.node.information.field_body
     - field.field.node.information.field_legacy_path
-    - field.field.node.information.field_revision_log_message
     - field.field.node.information.field_summary
     - node.type.information
   module:
@@ -41,19 +40,6 @@ content:
         add_above: '0'
     third_party_settings: {  }
     region: content
-  field_revision_log_message:
-    weight: 26
-    settings:
-      rows: 4
-      placeholder: ''
-    third_party_settings:
-      maxlength:
-        maxlength_js: null
-        maxlength_js_label: ''
-        maxlength_js_enforce: false
-        maxlength_js_truncate_html: false
-    type: string_textarea
-    region: content
   field_summary:
     weight: 1
     settings:
@@ -86,6 +72,14 @@ content:
     weight: 5
     region: content
     third_party_settings: {  }
+  revision_log:
+    weight: 81
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textarea
+    region: content
   scheduled_publication:
     type: datetime_default
     weight: 6
