--- a/composer.json
+++ b/composer.json
@@ -62,6 +62,7 @@
         "drupal/link_class": "^1.3",
         "drupal/linkit": "^4.3",
         "drupal/maxlength": "^1.0",
+        "drupal/menu_token": "^1.0@alpha",
         "drupal/openid_connect": "^1.0@beta",
         "drupal/page_manager": "^4.0@beta",
         "drupal/paragraphs": "^1.1",
@@ -152,6 +153,9 @@
             },
             "drupal/search_api_pantheon": {
                 "2996001 - Use Lando client cert": "https://www.drupal.org/files/issues/2018-08-29/use_lando_cert.patch"
+            },
+            "drupal/menu_token": {
+                "2948260 - Tokens not substituted in query string": "https://www.drupal.org/files/issues/2018-09-21/2988939-allow-query-parameters-12.diff"
             }
         },
         "merge-plugin": {
