--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -12,6 +12,8 @@ default:
       selenium2: ~
       # Must comment this out so it can be overriden by BEHAT_PARAMS
       # base_url: http://localhost
+      # behat.paths.base is the path with this config file
+      files_path: %behat.paths.base%/data/files
       sessions:
         default:
           goutte: ~
