--- a/web/sites/default/config/field.field.group.elected_official.field_shortname_or_acronym.yml
+++ b/web/sites/default/config/field.field.group.elected_official.field_shortname_or_acronym.yml
@@ -16,7 +16,7 @@ field_name: field_shortname_or_acronym
 entity_type: group
 bundle: elected_official
 label: 'Shortname or acronym'
-description: 'This is the commonly used shortname or acronym for the organization and is used to create the URL path for the landing page and all child content. If this value is changed, the URL paths for all content in this organization will be updated automatically.'
+description: 'This is the commonly used shortname or acronym for the organization and is used to create the URL path for the landing page and all child content. If this value is changed, the URL paths for all content in this organization will be updated automatically. Please select a unique shortname. When there is a naming conflict, the system will append a number after the shortname.'
 required: true
 translatable: true
 default_value: {  }
