--- a/web/sites/default/config/block.block.cloudy_menu_feedback_form_link.yml
+++ b/web/sites/default/config/block.block.cloudy_menu_feedback_form_link.yml
@@ -24,6 +24,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: '<front>'
+    pages: "<front>\r\n/taxonomy/term/*\r\n/node/*\r\n/group/*"
     negate: false
     context_mapping: {  }
