--- a/web/sites/default/config/metatag.metatag_defaults.front.yml
+++ b/web/sites/default/config/metatag.metatag_defaults.front.yml
@@ -7,12 +7,12 @@ _core:
 id: front
 label: 'Front page'
 tags:
+  title: 'City of Portland, Oregon | [site:name]'
   canonical_url: '[site:url]'
   description: '[site:slogan]'
-  title: 'Home | [site:name]'
   og_description: '[site:slogan]'
   og_site_name: '[site:name]'
   og_title: 'Home | [site:name]'
   twitter_cards_page_url: '[site:url]'
-  twitter_cards_title: 'Home | [site:name]'
   twitter_cards_type: summary
+  twitter_cards_title: 'Home | [site:name]'
