--- a/web/sites/default/config/core.entity_view_mode.user.full.yml
+++ b/web/sites/default/config/core.entity_view_mode.user.full.yml
@@ -3,7 +3,11 @@ langcode: en
 status: false
 dependencies:
   module:
+    - lightning_core
     - user
+third_party_settings:
+  lightning_core:
+    description: ''
 _core:
   default_config_hash: mQIF_foYjmnVSr9MpcD4CTaJE_FpO1AyDd_DskztGhM
 id: user.full
