--- a/web/sites/default/config/views.view.user_content_moderation_dashboard.yml
+++ b/web/sites/default/config/views.view.user_content_moderation_dashboard.yml
@@ -6,6 +6,7 @@ dependencies:
     - workflows.workflow.editorial
   module:
     - content_moderation
+    - eva
     - node
     - user
 id: user_content_moderation_dashboard
@@ -544,7 +545,7 @@ display:
           group_type: group
           admin_label: ''
           empty: true
-          content: '@total results found'
+          content: '<h2>@total items assigned to you for review</h2>'
           plugin_id: result
       footer: {  }
       empty: {  }
@@ -558,71 +559,36 @@ display:
           admin_label: 'field_reviewer: User'
           required: true
           plugin_id: standard
-      arguments:
-        uid:
-          id: uid
-          table: users_field_data
-          field: uid
-          relationship: field_reviewer
-          group_type: group
-          admin_label: ''
-          default_action: default
-          exception:
-            value: all
-            title_enable: false
-            title: All
-          title_enable: false
-          title: ''
-          default_argument_type: current_user
-          default_argument_options: {  }
-          default_argument_skip_url: false
-          summary_options:
-            base_path: ''
-            count: true
-            items_per_page: 25
-            override: false
-          summary:
-            sort_order: asc
-            number_of_records: 0
-            format: default_summary
-          specify_validation: false
-          validate:
-            type: none
-            fail: 'not found'
-          validate_options: {  }
-          break_phrase: false
-          not: false
-          entity_type: user
-          entity_field: uid
-          plugin_id: user_uid
+      arguments: {  }
       display_extenders: {  }
     cache_metadata:
       max-age: 0
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - url
         - url.query_args
-        - user
         - 'user.node_grants:view'
         - user.permissions
       tags:
         - 'config:workflow_list'
-  block_1:
-    display_plugin: block
-    id: block_1
-    display_title: Block
-    position: 1
+  entity_view_1:
+    display_plugin: entity_view
+    id: entity_view_1
+    display_title: EVA
+    position: 2
     display_options:
       display_extenders: {  }
+      entity_type: user
+      bundles:
+        - user
+      title: 'Assigned to you for review'
+      show_title: false
     cache_metadata:
       max-age: 0
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - url
         - url.query_args
-        - user
         - 'user.node_grants:view'
         - user.permissions
       tags:
