--- a/web/sites/default/config/core.entity_form_display.node.guide.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.guide.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.guide.field_body
     - field.field.node.guide.field_legacy_path
     - field.field.node.guide.field_related_content
+    - field.field.node.guide.field_reviewer
     - field.field.node.guide.field_summary
     - field.field.node.guide.field_topics
     - node.type.guide
@@ -53,6 +54,15 @@ content:
     region: content
   field_related_content:
     weight: 5
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
+  field_reviewer:
+    weight: 27
     settings:
       match_operator: CONTAINS
       size: 60
