--- a/web/sites/default/config/core.entity_view_display.node.guide.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.guide.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.guide.field_body
     - field.field.node.guide.field_legacy_path
     - field.field.node.guide.field_related_content
+    - field.field.node.guide.field_reviewer
     - field.field.node.guide.field_summary
     - field.field.node.guide.field_topics
     - node.type.guide
@@ -50,6 +51,14 @@ content:
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
+    region: content
+  field_reviewer:
+    weight: 3
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_summary:
     weight: 1
