--- a/composer.json
+++ b/composer.json
@@ -80,6 +80,7 @@
         "drupal/time_field": "^1.1",
         "drupal/twig_tweak": "^2.0",
         "drupal/views_bulk_operations": "^2.2",
+        "drupal/views_data_export": "^1.0@beta",
         "drupal/viewsreference": "^1.2",
         "drupal/webform": "^5.0@RC",
         "drush/drush": "9.3.0",
